Fix pinned tabs container overflow color

--- a/natsumi/modules/injected/tabs-fixes.css
+++ b/natsumi/modules/injected/tabs-fixes.css
@@ -27,7 +27,7 @@ SOFTWARE.
 /* ==== Firefox Nova tabs patches ==== */
 
 @media -moz-pref("browser.nova.enabled") and (not -moz-pref("natsumi.theme.islands")) {
-  #tabbrowser-arrowscrollbox {
+  #tabbrowser-arrowscrollbox, #pinned-tabs-container {
     &::part(overflow-start-indicator), &::part(overflow-end-indicator) {
       --toolbox-background-color: light-dark(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.05)) !important;
     }
@@ -35,7 +35,7 @@ SOFTWARE.
 }
 
 body[natsumi-compact-mode] {
-  #tabbrowser-arrowscrollbox {
+  #tabbrowser-arrowscrollbox, #pinned-tabs-container {
     &::part(overflow-start-indicator), &::part(overflow-end-indicator) {
       --toolbox-background-color: light-dark(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.05)) !important;
     }
